<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_dark"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:padding="20sp"
            android:text="@string/apptext"
            android:textAlignment="center"
            android:textSize="30sp"
            tools:text="@string/apptext" />

        <EditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint"
            android:inputType="number"
            android:padding="20sp"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:padding="20sp"
            android:text="@string/result"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            tools:text="@string/result" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:onClick="myFun"
            android:padding="20sp"
            android:text="@string/start"
            android:textSize="25sp" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20sp"
            android:text="@string/reset"
            android:textSize="20sp"


            tools:text="@string/reset" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pauseButton"
                android:layout_width="207dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="20sp"
                android:text="@string/pause"
                android:textSize="20sp"
                tools:text="@string/pause" />

            <Button
                android:id="@+id/stopButton"
                android:layout_width="207dp"
                android:layout_height="wrap_content"
                android:onClick="stop"
                android:padding="20sp"
                android:text="@string/stop"
                android:textSize="20sp"
                tools:text="@string/stop" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>